--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,16 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <style>
+      *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: 'Urbanist', sans-serif;
+        width: 100%;
+        height: 100%;
+      }
+    </style>
  
     <title>React App</title>
   </head>
