add file action, getFiles and fixed position bags

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,12 @@
         padding: 0;
         box-sizing: border-box;
         font-family: 'Urbanist', sans-serif;
+      }
+      #root {
         width: 100%;
-        height: 100%;
+      } 
+      body {
+        background-color: beige;
       }
     </style>
  
