add status action and add locales i18

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,10 @@
         box-sizing: border-box;
         font-family: 'Urbanist', sans-serif;
       }
+      a {
+        text-decoration: none;
+        color: inherit;
+      }
       #root {
         width: 100%;
       } 
